--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Boxiting</h2>
+    <h2>Boxiting Main</h2>
     <div>안녕 나랑 대련할래?</div>
 </body>
 </html>
