댓글기능 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Boxiting</h2>
+    <h2>Boxiting </h2>
     <div>안녕 나랑 대련할래?</div>
+    <div>댓글</div>
 </body>
 </html>
